--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "globalbooks",
+  "name": "gold_gym_3x",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,7 +16,6 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
-    "gitignore": "^0.7.0",
     "mongoose": "^6.2.4",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.2",
