--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_URL='mongodb://127.0.0.1:27017/gold_gym_3x'
+DB_URL='mongodb+srv://RajeevRS:B5QbNyh8nD4Qn1gY@rajeevrs11.eeoox.mongodb.net/goldGym3X?retryWrites=true&w=majority'
 EMAIL=rs.pharma11@gmail.com
 PASSWORD=jocdzzhbjfzdzwro
 PORT=3000
